GNOME Bugzilla – Bug 757895
tsdemux: pending buffers leak when flushing
Last modified: 2015-11-16 07:19:14 UTC
Created attachment 315193 [details] [review] patch removing the leak if the pending buffers are not pushed and the stream is removed, the pending buffers are not cleared. I have attached a patch that fix the leak
commit 21a025c2a162d7ff8f99e69d61edfa19771939cb Author: Nicolas Huet <nicolas.huet@parrot.com> Date: Tue Nov 10 16:32:37 2015 +0100 tsdemux: fix pending buffers leak when flushing https://bugzilla.gnome.org/show_bug.cgi?id=757895